syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "Movie";
option objc_class_prefix = "HLW";

package com.example;

service MovieService {
  rpc addMovieDetails(CreateOrUpdateMovieRequest) returns (MovieReply);
  rpc getMovieDetails(MovieRequest) returns (MovieReply);
  rpc editMovieDetails(CreateOrUpdateMovieRequest) returns (MovieReply);
  rpc updateMovieDetails(MovieRequest) returns (MovieReply);
}

message MovieRequest {
  int32 id = 1;
}

message MovieReply {
  string title = 1;
  string review = 2;
  int32 rating = 3;
  int32 imdb = 4;
}

message CreateOrUpdateMovieRequest{
  int32 id = 1;
  string title = 2;
  string review = 3;
  int32 rating = 4;
  int32 imdb = 5;
}
